[metadata]
name = megautils
version = 2017.0510
summary = Client Library for interfacing with various devices in LSI MegaRAID.
description-file =
    README.rst
license = Apache License, Version 2.0
author = june Yang
author-email = juneyang.go@gmail.com
home-page = https://github.com/openstack/megautils
classifier =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    megautils

[entry_points]
ironic_python_agent.hardware_managers =
    megautils = megautils.ipa_mega_manager.hardware_manager:MegaHardwareManager
